--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hyperdope Gematria Calculator",
-  "name": "Hyperdope Gematria Calculator",
+  "short_name": "Hyperdope Gematria",
+  "name": "Hyperdope Gematria",
   "background_color": "#202631",
   "icons": [
     {
